--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+ACCESS_CONTROL_ALLOW_ORIGIN=http://localhost:4001,http://localhost:4000
+ACCESS_CONTROL_ALLOW_ORIGIN_SPECIFIC=https://canonizer.com
