--- a/composer.json
+++ b/composer.json
@@ -5,18 +5,17 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.3|^8.0",
-        "anik/form-request": "^4.3",
-        "flipbox/lumen-generator": "^8.2",
-        "illuminate/session": "^8.74",
-        "jenssegers/mongodb": "*",
-        "laravel/lumen-framework": "^8.3.1",
-        "mongodb/mongodb": "^1.10",
-        "zircote/swagger-php": "^4.2"
+        "php": "^8.0",
+        "anik/form-request": "^4.5",
+        "flipbox/lumen-generator": "^9.2",
+        "jenssegers/mongodb": "^3.9",
+        "laravel/lumen-framework": "^9.0",
+        "mongodb/mongodb": "^1.15",
+        "zircote/swagger-php": "^4.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
-        "mockery/mockery": "^1.3.1",
+        "mockery/mockery": "^1.4.4",
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
@@ -27,20 +26,20 @@
         }
     },
     "autoload-dev": {
-        "classmap": [
-            "tests/"
-        ]
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
     },
-    "config": {
-        "preferred-install": "dist",
-        "sort-packages": true,
-        "optimize-autoloader": true
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "scripts": {
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ]
-    }
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
