--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,8 @@ QUEUE_CONNECTION=sync
 
 ACCESS_CONTROL_ALLOW_ORIGIN=http://localhost:4001,http://localhost:4000
 ACCESS_CONTROL_ALLOW_ORIGIN_SPECIFIC=https://canonizer.com
+
+COMMIT_TIME_DELAY_IN_SECONDS=3600 # 1 hour
+
+API_APP_URL=http://canonizerapi.local
+API_COMMIT_CHANGE=api/v3/canonizer/api/commit/change
