--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,7 @@ COMMIT_TIME_DELAY_IN_SECONDS=3600 # 1 hour
 API_APP_URL=http://canonizerapi.local
 API_COMMIT_CHANGE=api/v3/canonizer/api/commit/change
 API_AGREE_CHANGE_FOR_LIVE=api/v3/canonizer/api/agree-to-change
+
+HASH_MEMORY_COST=
+HASH_ITERATION=
+HASH_PARALLELISM_FACTOR=
